changed list style and mobile edit icon functionality

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <nav class="navbar navbar-default" role="navigation">
         <div class="container-fluid">
           <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed edit-mobile" data-toggle="collapse" data-target="" aria-expanded="false" aria-controls="" onClick="toggleEdit();" title="Edit">
+            <button type="button" id="settings_mobile" class="navbar-toggle collapsed edit-mobile" data-toggle="collapse" data-target="" aria-expanded="false" aria-controls="" onClick="toggleEdit();" title="Edit">
             <i class="fa fa-edit"></i>
             </button>
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -50,7 +50,6 @@
             <ul class="nav navbar-nav" id="nav_ul">
               <li id="steps_nav" class="active"><a title="Show crisis steps" href="#" onClick="showSteps();return false;">Steps</a></li>
               <li id="contacts_nav"><a title="Show contacts" href="#" onClick="showContacts();return false;">Contacts</a></li>
-              <li class="visible-xs"><a title = "Edit" href="#" id="editNavMenu" onClick="toggleEdit();return false;">Edit</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li id="settings" class="visible-md visible-lg visible-sm"><button type="button" onClick="toggleEdit();" title="Edit"><i class="fa fa-edit"></i></button></li>
