--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#" onClick="return false;">LC Counseling Services Crisis App</a>
+            <a class="navbar-brand visible-md visible-lg visible-sm" href="#" onClick="return false;">LC Counseling Services Crisis App</a>
+            <a class="navbar-brand visible-xs" href="#" onClick="return false;">LCCS Crisis App</a>
           </div>
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav" id="nav_ul">
