--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Luther College Health Services Crisis App">
     <meta name="author" content="Gage Dykema">
-    <link rel="icon" href="../../favicon.ico">
-
+    <link rel="icon" href="./favicon.ico">
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Roboto+Slab' rel='stylesheet' type='text/css'>
     <title>Luther College Counseling Services Crisis App</title>
 
     <!-- Bootstrap core CSS -->
@@ -38,8 +39,8 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand visible-md visible-lg visible-sm" href="#" onClick="return false;">LC Counseling Services Crisis App</a>
-            <a class="navbar-brand visible-xs" href="#" onClick="return false;">LCCS Crisis App</a>
+            <p class="navbar-brand visible-md visible-lg visible-sm" href="#" onClick="return false;">LC Counseling Services Crisis App</p>
+            <p class="navbar-brand visible-xs" href="#" onClick="return false;">LCCS Crisis App</p>
           </div>
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav" id="nav_ul">
@@ -68,7 +69,7 @@
                 </div>
           </div>
           <div class = "col-xs-offset-3 col-xs-3">
-              <button class="flipButton" onclick='flipSide();'>Flip</button>
+              <button class="flipButton" onclick='flipSide();'>Flip Over</button>
           </div>
 		</div>
         
@@ -95,7 +96,7 @@
                     <li id="addElemSecContacts"  class="hide_section"><input type="text" id="addElemContacts"><button type="button" onClick="addItem();" title="Add"><i class="fa fa-plus"></i></button></li> 
                 </ul>
                 <div class = "col-xs-offset-3 col-xs-3">
-                    <button class="flipButton" onclick='flipSide();'>Flip</button>
+                    <button class="flipButton" onclick='flipSide();'>Flip Over</button>
                 </div>
             </div>
 		</div>
