--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 
 <!DOCTYPE html>
-<html lang="en" manifest="./cache.manifest">
+<html lang="en" manifest="./app.appcache">
+  <!-- <html lang="en"> -->
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,21 +9,19 @@
     <meta name="description" content="Luther College Health Services Crisis App">
     <meta name="author" content="Gage Dykema">
     <link rel="icon" href="./favicon.ico">
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Roboto+Slab' rel='stylesheet' type='text/css'>
     <title>Luther College Counseling Services Crisis App</title>
 
     <!-- Bootstrap core CSS -->
     <link href="./css/bootstrap.min.css" rel="stylesheet">
-    <link href="./css/font-awesome.css" rel="stylesheet">
+    <link href="./css/font-awesome.min.css" rel="stylesheet">
     <link href="./css/main.css" rel="stylesheet">
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
-  <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-  <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+  <script src="./js/jquery-1.11.1.min.js"></script>
+  <script src="./js/jquery-migrate-1.2.1.min.js"></script>
   <body onload="addExistingData()">
 
     <div class="site-wrapper">
@@ -123,7 +122,6 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="./js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <!-- <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script> -->
