--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         
       <nav class="navbar navbar-default" role="navigation">
         <div class="container-fluid">
-          <div class="navbar-header">
+          <div class="navbar-header" id="topOfPage">
             <button type="button" id="settings_mobile" class="navbar-toggle collapsed edit-mobile" data-toggle="collapse" data-target="" aria-expanded="false" aria-controls="" onClick="toggleEdit();" title="Edit">
             <i class="fa fa-edit"></i>
             </button>
@@ -90,7 +90,7 @@
                     <li> Call the NE Iowa Behavioral Health Center Crisis Line <a class="phone" href="tel:563-382-3649">563-382-3649</a> or <a class="phone" href="tel:1-800-400-8923">1-800-400-8923</a></li>
                     <li>Go to the Winneshiek Medical Center Emergency Room <a class="phone" href="tel:563-382-2911">563-382-2911</a></li>
                 </ul>
-                <p class="lead">Other</p>
+                <p class="lead" id="otherContacts">Other</p>
                 <ul id="contacts_ul">
                     <li id="addElemSecContacts"  class="hide_section"><input type="text" id="addElemContacts"><button type="button" onClick="addItem();" title="Add"><i class="fa fa-plus"></i></button></li> 
                 </ul>
