started shortcut icon work

--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Luther College Health Services Crisis App">
     <meta name="author" content="Gage Dykema">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <link rel="apple-touch-icon" href="./img/crisis-app-icon1.png"/>
+    <link rel="apple-touch-icon-precomposed" sizes="128x128" href="./img/crisis-app-icon1.png">
+
+    <meta name="mobile-web-app-capable" content="yes">
+    <link rel="shortcut icon" sizes="196x196" href="./img/crisis-app-icon1.png">
+    <link rel="shortcut icon" sizes="128x128" href="./img/crisis-app-icon1.png">
     <link rel="icon" href="./favicon.ico">
     <title>Luther College Counseling Services Crisis App</title>
 
