added room for mobile keyboards

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                     <li id="addElemSecContacts"  class="hide_section"><input type="text" id="addElemContacts"><button type="button" onClick="addItem();" title="Add"><i class="fa fa-plus"></i></button></li> 
                 </ul>
                 <div class = "col-xs-offset-3 col-xs-3">
-                    <button class="flipButton" onclick='flipSide();'>Flip Over</button>
+                    <button class="flipButton" id="contactFlipButton" onclick='flipSide();'>Flip Over</button>
                 </div>
             </div>
 		</div>
